fixing heroku crash

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node src/app.js",
     "test": "echo \"test successful!\" && exit 1",
     "pretest": "eslint ./src --fix",
     "dev": "nodemon src/app.js"
