--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js",
-    "test": "echo \"test successful!\" && exit 1",
+    "test": "echo \"test successful!\"",
     "pretest": "eslint ./src --fix",
     "dev": "nodemon src/app.js"
   },
